# docrs

./: Cargo.toml  README.md  docrs.code-workspace
.cargo/: config.toml
examples/blog/: .gitignore
examples/blog/.docrs/: config.toml
examples/blog/.docrs/templates/blog/: index.hbs  page.hbs
examples/blog/src/: hello.md
src/: build.rs  cmd.rs  config.rs  lib.rs  render.rs  server.rs  sse.rs  template.rs
src/cmd/: build.rs  dev.rs  init.rs  serve.rs
src/template/: blog.rs
src/template/blog/: page.hbs  sse.js
