[package]
name = "docrs"
version = "0.1.0"
edition = "2021"
default-run = "docrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "docrs"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
colored = "2.0.0"
dialoguer = "0.10.1"
pulldown-cmark = "0.9.1"
handlebars = "4.3.0"
serde_json = "1.0.81"
axum = "0.5.6"
tokio = { version = "1.18.2", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["fs"] }
webbrowser = "0.7.1"
hotwatch = "0.4.6"
futures = "0.3.21"
walkdir = "2.3.2"
tokio-stream = { version = "0.1.8", features = ["sync"] }
rust-embed = { version = "6.4.0", features = [
    "debug-embed",
    "include-exclude",
] }
